second push/ prior to lunch

--- a/EDA Table Creation Loop.ipynb
+++ b/EDA Table Creation Loop.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +632,7 @@
        "[132 rows x 5 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +785,7 @@
        "[220 rows x 5 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -838,79 +839,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Yds/G</th>\n",
-       "      <th>Pts/G</th>\n",
+       "      <th>Yds/G(Playoffs)</th>\n",
+       "      <th>Pts/G(Playoffs)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>132.000000</td>\n",
-       "      <td>132.000000</td>\n",
+       "      <td>132.00</td>\n",
+       "      <td>132.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>334.923485</td>\n",
-       "      <td>20.194697</td>\n",
+       "      <td>334.92</td>\n",
+       "      <td>20.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>32.044430</td>\n",
-       "      <td>2.880238</td>\n",
+       "      <td>32.04</td>\n",
+       "      <td>2.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>267.100000</td>\n",
-       "      <td>14.100000</td>\n",
+       "      <td>267.10</td>\n",
+       "      <td>14.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>307.875000</td>\n",
-       "      <td>18.350000</td>\n",
+       "      <td>307.88</td>\n",
+       "      <td>18.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>338.150000</td>\n",
-       "      <td>20.200000</td>\n",
+       "      <td>338.15</td>\n",
+       "      <td>20.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>359.150000</td>\n",
-       "      <td>21.925000</td>\n",
+       "      <td>359.15</td>\n",
+       "      <td>21.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>411.600000</td>\n",
-       "      <td>26.800000</td>\n",
+       "      <td>411.60</td>\n",
+       "      <td>26.80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Yds/G       Pts/G\n",
-       "count  132.000000  132.000000\n",
-       "mean   334.923485   20.194697\n",
-       "std     32.044430    2.880238\n",
-       "min    267.100000   14.100000\n",
-       "25%    307.875000   18.350000\n",
-       "50%    338.150000   20.200000\n",
-       "75%    359.150000   21.925000\n",
-       "max    411.600000   26.800000"
+       "       Yds/G(Playoffs)  Pts/G(Playoffs)\n",
+       "count           132.00           132.00\n",
+       "mean            334.92            20.19\n",
+       "std              32.04             2.88\n",
+       "min             267.10            14.10\n",
+       "25%             307.88            18.35\n",
+       "50%             338.15            20.20\n",
+       "75%             359.15            21.92\n",
+       "max             411.60            26.80"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "yes_overall_df = yes_overall_df.rename(columns={'Yds/G': 'Yds/G(Playoffs)', 'Pts/G':'Pts/G(Playoffs)'})\n",
+    "yes_overall_df = yes_overall_df.round(2)\n",
     "yes_overall_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -945,82 +948,270 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Yds/G</th>\n",
-       "      <th>Pts/G</th>\n",
+       "      <th>Yds/G(No Playoffs)</th>\n",
+       "      <th>Pts/G(No Playoffs)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>220.000000</td>\n",
-       "      <td>220.000000</td>\n",
+       "      <td>220.00</td>\n",
+       "      <td>220.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>351.632273</td>\n",
-       "      <td>23.946364</td>\n",
+       "      <td>351.63</td>\n",
+       "      <td>23.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>28.466120</td>\n",
-       "      <td>3.214513</td>\n",
+       "      <td>28.47</td>\n",
+       "      <td>3.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>252.300000</td>\n",
-       "      <td>14.800000</td>\n",
+       "      <td>252.30</td>\n",
+       "      <td>14.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>333.000000</td>\n",
-       "      <td>21.575000</td>\n",
+       "      <td>333.00</td>\n",
+       "      <td>21.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>350.100000</td>\n",
-       "      <td>23.900000</td>\n",
+       "      <td>350.10</td>\n",
+       "      <td>23.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>373.050000</td>\n",
-       "      <td>26.525000</td>\n",
+       "      <td>373.05</td>\n",
+       "      <td>26.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>440.100000</td>\n",
-       "      <td>30.900000</td>\n",
+       "      <td>440.10</td>\n",
+       "      <td>30.90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Yds/G       Pts/G\n",
-       "count  220.000000  220.000000\n",
-       "mean   351.632273   23.946364\n",
-       "std     28.466120    3.214513\n",
-       "min    252.300000   14.800000\n",
-       "25%    333.000000   21.575000\n",
-       "50%    350.100000   23.900000\n",
-       "75%    373.050000   26.525000\n",
-       "max    440.100000   30.900000"
+       "       Yds/G(No Playoffs)  Pts/G(No Playoffs)\n",
+       "count              220.00              220.00\n",
+       "mean               351.63               23.95\n",
+       "std                 28.47                3.21\n",
+       "min                252.30               14.80\n",
+       "25%                333.00               21.58\n",
+       "50%                350.10               23.90\n",
+       "75%                373.05               26.52\n",
+       "max                440.10               30.90"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "no_overall_df = no_overall_df.rename(columns={'Yds/G': 'Yds/G(No Playoffs)', 'Pts/G':'Pts/G(No Playoffs)'})\n",
+    "no_overall_df = no_overall_df.round(2)\n",
     "no_overall_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total_generic = pd.concat([yes_overall_df, no_overall_df], axis=1,sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yds/G(Playoffs)</th>\n",
+       "      <th>Pts/G(Playoffs)</th>\n",
+       "      <th>Yds/G(No Playoffs)</th>\n",
+       "      <th>Pts/G(No Playoffs)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>132.00</td>\n",
+       "      <td>132.00</td>\n",
+       "      <td>220.00</td>\n",
+       "      <td>220.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>334.92</td>\n",
+       "      <td>20.19</td>\n",
+       "      <td>351.63</td>\n",
+       "      <td>23.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>32.04</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>28.47</td>\n",
+       "      <td>3.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>267.10</td>\n",
+       "      <td>14.10</td>\n",
+       "      <td>252.30</td>\n",
+       "      <td>14.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>307.88</td>\n",
+       "      <td>18.35</td>\n",
+       "      <td>333.00</td>\n",
+       "      <td>21.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>338.15</td>\n",
+       "      <td>20.20</td>\n",
+       "      <td>350.10</td>\n",
+       "      <td>23.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>359.15</td>\n",
+       "      <td>21.92</td>\n",
+       "      <td>373.05</td>\n",
+       "      <td>26.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>411.60</td>\n",
+       "      <td>26.80</td>\n",
+       "      <td>440.10</td>\n",
+       "      <td>30.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Yds/G(Playoffs)  Pts/G(Playoffs)  Yds/G(No Playoffs)  \\\n",
+       "count           132.00           132.00              220.00   \n",
+       "mean            334.92            20.19              351.63   \n",
+       "std              32.04             2.88               28.47   \n",
+       "min             267.10            14.10              252.30   \n",
+       "25%             307.88            18.35              333.00   \n",
+       "50%             338.15            20.20              350.10   \n",
+       "75%             359.15            21.92              373.05   \n",
+       "max             411.60            26.80              440.10   \n",
+       "\n",
+       "       Pts/G(No Playoffs)  \n",
+       "count              220.00  \n",
+       "mean                23.95  \n",
+       "std                  3.21  \n",
+       "min                 14.80  \n",
+       "25%                 21.58  \n",
+       "50%                 23.90  \n",
+       "75%                 26.52  \n",
+       "max                 30.90  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_generic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1_yrds = Yes_playoffs_df['Yds/G']\n",
+    "data2_yrds = No_playoffs_df['Yds/G']\n",
+    "data1_pnts = Yes_playoffs_df['Pts/G']\n",
+    "data2_pnts = No_playoffs_df['Pts/G']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def welch_test(data_1, data_2):\n",
+    "    numerator = np.mean(data_1) - np.mean(data_2)\n",
+    "    denominator_sq = (np.var(data_1) / len(data_2)) + (np.var(data_2) / len(data_2))\n",
+    "    return numerator / np.sqrt(denominator_sq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welch Test Statistic based on avg_yards allowed: -5.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_statistic_yrds = welch_test(data1_yrds, data2_yrds)\n",
+    "print(\"Welch Test Statistic based on avg_yards allowed: {:2.2f}\".format(test_statistic_yrds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welch Test Statistic based on avg_pnts allowed: -12.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_statistic_pnts = welch_test(data1_pnts, data2_pnts)\n",
+    "print(\"Welch Test Statistic based on avg_pnts allowed: {:2.2f}\".format(test_statistic_pnts))"
+   ]
   }
  ],
  "metadata": {
