push 5/ after first plot

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,7 +13,12 @@
    "source": [
     "***NULL Hypothesis:***\n",
     "\n",
-    "The mean points_against and mean yrds_against for teams that make the playoffs = the mean points_against and mean yrds_against of teams that did not make the playoffs"
+    "The mean points_against and mean yrds_against for teams that make the playoffs = the mean points_against and mean yrds_against of teams that did not make the playoffs\n",
+    "\n",
+    "$$ p_M = P(\\text{avg_yards against & avg_pnts against for TMs that make playoffs}) $$\n",
+    "$$ p_D = P(\\text{avg_yards against & avg_pnts against for TMs that don't make playoffs}) $$\n",
+    "\n",
+    "$$ H_0: \\ p_M = p_D $$"
    ]
   },
   {
